``` feat(monitor): 增强Docker容器与镜像管理功能并优化回调处理新增Docker容器创建、启动、拉取镜像等操作的回调支持，完善WebSocket通知机制。同时增加相关回调接口和适配器，提升异步任务的状态跟踪与错误处理能力。此外，更新了文档中API响应码格式，统一为字符串类型。 移除了冗余的Docker配置项，并增加了.gitignore忽略规则。 ```